Improved logger